// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value if report is not present 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <div
      className="css-1w8hocc"
    >
      <Component />
    </div>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;

exports[`defaults value if report.meta is not present 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <div
      className="css-1w8hocc"
    >
      <Component />
    </div>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;

exports[`report total is formated 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <div
      className="css-1w8hocc"
    >
      formatedValue
    </div>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;
